.travis.yml test

--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,9 @@
 	<title>Awesome-Blog</title>
 </head>
 <body>
+<main>
 <H1>This is my h1</H1>
 <p>My awesome content would be here</p>
+</main>
 </body>
 </html>
