changed index.html for test

--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <main>
-<H1>This is my h1</H1>
+<H1>This is my h1 changed for test</H1>
 <p>My awesome content would be here</p>
 </main>
 </body>
